--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "vpdemo",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Support demo import and preview for vitepress",
   "type": "module",
   "files": [
-    "dist/vpdemo.es.mjs",
-    "dist/vpdemo.umd.cjs",
+    "dist/index.js",
     "dist/demo.vue",
     "dist/index.d.ts",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
   ],
-  "main": "dist/vpdemo.umd.cjs",
-  "module": "dist/vpdemo.es.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/vpdemo.es.mjs",
-      "require": "./dist/vpdemo.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./demo.vue": "./dist/demo.vue",
     "./index.d.ts": "./dist/index.d.ts"
