--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -34,9 +34,11 @@
     "start": "vitepress dev"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^20.3.1",
     "shiki": "^0.14.2",
     "vite": "latest",
-    "vite-plugin-node-polyfills": "^0.8.2",
+    "vite-plugin-node-polyfills": "^0.9.0",
     "vite-plugin-static-copy": "^0.16.0",
     "vitepress": "latest",
     "vue": "latest"
