--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.3.1",
+    "fs-extra": "^11.1.1",
     "shiki": "^0.14.2",
     "vite": "latest",
     "vite-plugin-node-polyfills": "^0.9.0",
