--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -34,12 +34,12 @@
     "start": "vitepress dev"
   },
   "devDependencies": {
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.4.9",
     "shiki": "^0.14.3",
     "vite": "latest",
-    "vite-plugin-node-polyfills": "^0.9.0",
+    "vite-plugin-node-polyfills": "0.10.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "vitepress": "latest",
+    "vitepress": "1.0.0-beta.7",
     "vue": "latest"
   }
 }
