--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "start": "vitepress dev"
   },
   "devDependencies": {
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.5.1",
     "shiki": "^0.14.3",
-    "vite": "latest",
+    "vite": "^4.4.9",
     "vite-plugin-node-polyfills": "0.10.0",
     "vite-plugin-static-copy": "^0.17.0",
     "vitepress": "1.0.0-beta.7",
-    "vue": "latest"
+    "vue": "^3.3.4"
   }
 }
