--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.1.18",
+  "version": "0.1.19",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -9,6 +9,7 @@
     "README.md"
   ],
   "main": "dist/vpindex.js",
+  "type": "module",
   "types": "dist/index.d.ts",
   "keywords": [
     "vitepress",
@@ -34,12 +35,12 @@
     "start": "vitepress dev"
   },
   "devDependencies": {
-    "@types/node": "^20.5.1",
+    "@types/node": "^20.5.6",
     "shiki": "^0.14.3",
     "vite": "^4.4.9",
-    "vite-plugin-node-polyfills": "0.10.0",
+    "vite-plugin-node-polyfills": "^0.11.3",
     "vite-plugin-static-copy": "^0.17.0",
-    "vitepress": "1.0.0-beta.7",
+    "vitepress": "1.0.0-rc.5",
     "vue": "^3.3.4"
   }
 }
