--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -34,13 +34,14 @@
     "preview-docs": "vitepress preview",
     "start": "vitepress dev"
   },
+  "packageManager": "pnpm@8.10.5",
   "devDependencies": {
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.9.0",
     "shiki": "^0.14.5",
-    "vite": "^4.4.11",
-    "vite-plugin-node-polyfills": "^0.15.0",
+    "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.16.0",
     "vite-plugin-static-copy": "^0.17.0",
-    "vitepress": "1.0.0-rc.21",
-    "vue": "^3.3.4"
+    "vitepress": "1.0.0-rc.26",
+    "vue": "^3.3.8"
   }
 }
