--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpressdemo",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Support demo import and preview for vitepress",
   "files": [
     "dist",
@@ -34,14 +34,14 @@
     "preview-docs": "vitepress preview",
     "start": "vitepress dev"
   },
-  "packageManager": "pnpm@8.13.0",
+  "packageManager": "pnpm@8.15.5",
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "shikiji": "^0.9.9",
-    "vite": "^5.0.10",
-    "vite-plugin-node-polyfills": "^0.17.0",
-    "vite-plugin-static-copy": "^1.0.0",
-    "vitepress": "1.0.0-rc.32",
-    "vue": "^3.3.12"
+    "@types/node": "^20.11.30",
+    "shiki": "^1.2.1",
+    "vite": "^5.2.6",
+    "vite-plugin-node-polyfills": "^0.21.0",
+    "vite-plugin-static-copy": "^1.0.2",
+    "vitepress": "1.0.1",
+    "vue": "^3.4.21"
   }
 }
