--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "vite": "^5.2.6",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-static-copy": "^1.0.2",
-    "vitepress": "1.0.1",
+    "vitepress": "^1.0.1",
     "vue": "^3.4.21"
   }
 }
